delete stars in piece